--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: example
-description: "A new Flutter project."
+description: "Demonstration app for tutorial_overlay package"
 
 version: 1.0.0+1
 
@@ -9,9 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  tutorial_overlay:
-    path: ../
-
+  tutorial_overlay: ^1.0.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
