--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tutorial_overlay
-description: "A Flutter package for creating interactive step-by-step tutorials with overlays."
+description: "A Flutter package for building interactive, step-by-step tutorials that highlight and point to widgets across multiple screens with customizable indicators."
 version: 1.0.1
 homepage: https://github.com/xinyi-chong/tutorial_overlay
 repository: https://github.com/xinyi-chong/tutorial_overlay
@@ -16,18 +16,24 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.0
 
 topics:
   - tutorial
   - tooltip
   - overlay
+  - onboarding
+  - user-guide
+  - walkthrough
+  - widget-highlight
+  - interactive-tutorial
 
 screenshots:
-  - description: 'This screenshot shows the tutorial steps across pages.'
+  - description: 'Multi-page tutorial flow.'
     path: assets/screenshots/tutorial-across-pages.gif
-  - description: 'This screenshot shows a custom indicator used during the tutorial steps.'
+  - description: 'Custom arrow indicator pointing to a button with explanatory tooltip.'
     path: assets/screenshots/custom-indicator.png
-  - description: 'This screenshot shows the tutorial without a target widget.'
+  - description: 'Tutorial without a highlighting widget.'
     path: assets/screenshots/tutorial-without-target-widget.png
-  - description: 'This video shows the tutorial update functionality, where the tutorial content updates when the language is changed.'
+  - description: 'Dynamic content update demonstrating localization support.'
     path: assets/screenshots/tutorial-update.gif
