fix(pubspec): reduce topics to 5 for pub.dev compliance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,7 @@ topics:
   - tooltip
   - overlay
   - onboarding
-  - user-guide
-  - walkthrough
-  - widget-highlight
-  - interactive-tutorial
+  - guide
 
 screenshots:
   - description: 'Multi-page tutorial flow.'
